# score-addon-quarre

./: CMakeLists.txt  score_addon_quarre.cpp  score_addon_quarre.hpp
quarre/application-plugin/: quarre-application-plugin.cpp  quarre-application-plugin.hpp
quarre/commands/: quarre-command-factory.hpp
quarre/device/: quarre-device.cpp  quarre-device.hpp  quarre-protocol-factory.cpp  quarre-protocol-factory.hpp  quarre-protocol-settings-widget.cpp  quarre-protocol-settings-widget.hpp  quarre-protocol-specific-settings.cpp  quarre-protocol-specific-settings.hpp
quarre/dispatch/: quarre-dispatch.cpp  quarre-dispatch.hpp
quarre/interaction/: quarre-interaction.cpp  quarre-interaction.hpp
quarre/js/: quarre-js.cpp  quarre-js.hpp
quarre/mapping/: quarre-mapping.cpp  quarre-mapping.hpp
quarre/net/: nethdl.cpp  nethdl.hpp
quarre/panel/: quarre-panel-delegate-factory.hpp  quarre-panel-delegate.cpp  quarre-panel-delegate.hpp
quarre/polymorphic-entity/: quarre-polymorphic-entity.cpp  quarre-polymorphic-entity.hpp
quarre/process/: quarre-process-factory.hpp  quarre-process-metadata.hpp  quarre-process-model.cpp  quarre-process-model.hpp
quarre/process/executor/: quarre-process-executor.cpp  quarre-process-executor.hpp
quarre/process/inspector/: quarre-process-inspector.cpp  quarre-process-inspector.hpp
quarre/process/layer/: quarre-process-layer-factory.hpp  quarre-process-layer-presenter.cpp  quarre-process-layer-presenter.hpp  quarre-process-layer-view.cpp  quarre-process-layer-view.hpp
quarre/process/local-tree/: quarre-process-local-tree.cpp  quarre-process-local-tree.hpp
quarre/simple-element/: quarre-simple-element.cpp  quarre-simple-element.hpp  quarre-simple-entity.cpp  quarre-simple-entity.hpp
quarre/user/: quarre-modules.hpp  quarre-user.cpp  quarre-user.hpp
